no message for me :<

--- a/resources/templates/messages.html
+++ b/resources/templates/messages.html
@@ -13,12 +13,12 @@
     <button type="submit">Submit</button>
 </form>
 Messages by {{name}}:
-<nl>
+<ol>
     {{#messageAdd}}
     <br>
-    {{messages}}
+    <li>{{messages}}</li>
 
     {{/messageAdd}}
-</nl>
+</ol>
 </body>
 </html>
